@@ -11,6 +11,7 @@ Merged from 1.1:
  * Fix ALTER TABLE overriding compression options with defaults
    (CASSANDRA-4996, 5066)
  * fix specifying and altering crc_check_chance (CASSANDRA-5053)
+ * fix Murmur3Partitioner ownership% calculation (CASSANDRA-5076)
 
 
 1.2-rc1
